Increase PermGem size for local runs